# developer-evolution

./: .gitignore  LICENSE  README.md  git_workflow.sh
cpp-advanced/: CMakeLists.txt  README.md  build.sh  cpp-advanced-study.code-workspace  run.sh
cpp-advanced/day1/: CMakeLists.txt  CMakeLists.txt.bak
cpp-advanced/day1/examples/: hello_modern_cpp.cpp  move_semantics_demo.cpp  stl_advanced.cpp
cpp-advanced/day1/exercises/: move_semantics_exercises.cpp
cpp-advanced/day1/project/: resource_manager_project.cpp
cpp-advanced/resources/Study Plan/: cpp_env_complete_setup.md  cpp_env_setup.md  cpp_study_plan.md
cpp-advanced/resources/books/: Common_bash_cmd.txt  cpp_env_structure.md  emoji.txt
